--- a/.gitignore
+++ b/.gitignore
@@ -1,86 +1,6 @@
-# Dependencies
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Production build
-dist/
-build/
-client/dist/
-
-# Environment variables
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Database
-*.db
-*.sqlite
-
-# Logs
-*.log
-logs/
-
-# Runtime data
-pids/
-*.pid
-*.seed
-*.pid.lock
-
-# Coverage directory used by tools like istanbul
-coverage/
-
-# Dependency directories
-node_modules/
-jspm_packages/
-
-# Optional npm cache directory
-.npm
-
-# Optional REPL history
-.node_repl_history
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
-
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-
-# OS
+node_modules
+dist
 .DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-
-# Replit specific
-.replit
-replit.nix
-
-# Temporary files
-.tmp/
-temp/
-
-# TypeScript
-*.tsbuildinfo
-
-# Database dumps
-*.sql.gz
-*.sql.backup
-
-# Uploads
-uploads/
-
-# Cache
-.cache/
+server/public
+vite.config.ts.*
+*.tar.gz
